# cde

./: .gitignore  AGENT.md  CODE_OF_CONDUCT.md  FEEDBACK.md  PLAN.md  PREFERENCES.md  README.md  preferences.example.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: autoperf-blocking.md
.github/workflows/: test.yml
docs/: from-xpk.md
examples/: README.md
examples/kernel-benchmark/: README.md
examples/maxtext-llama2-7b/: README.md  cde.yaml
examples/maxtext-llama2-7b/manifests/: jobset.yaml.j2
examples/vllm/: README.md
src/cde/: __init__.py  __main__.py  cli.py  completers.py  config.py  context_hash.py  crane.py  db.py  driver.py  git_info.py  k8s.py  logging.py  manifest_inject.py  paths.py  preferences.py  recent.py  suggest.py  templating.py  watcher.py
src/cde/commands/: __init__.py  annotate.py  build.py  compare.py  defaults.py  delete.py  history.py  init.py  lineage.py  logs.py  profile.py  prune.py  reap.py  run.py  server.py  shell.py  status.py  sync.py  watch.py
src/cde/templates/: cde.yaml  jobset.yaml.j2
tests/: test_cli_surface.py  test_completers.py  test_config.py  test_context_hash.py  test_crane.py  test_db.py  test_delete.py  test_examples.py  test_history_cli.py  test_init.py  test_k8s.py  test_manifest_inject.py  test_preferences.py  test_prune.py  test_reap.py  test_recent.py  test_run_render_only.py  test_shell.py  test_status.py  test_templating.py  test_watcher.py
